[package]
name = "r2-rs"
version = "0.1.0"
authors = ["chirsz <chirsz@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
rustyline = "5"
clap = "2.33.0"
rustyline-derive = "0.2.0"
num-bigint = "0.2.3"
