[package]
name = "r2-rs"
version = "0.1.0"
authors = ["chirsz <chirsz@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom              = "5"
rustyline        = "6.3"
rustyline-derive = "0.3.1"
anyhow           = "1.0"
clap             = "2.33"
num-bigint       = "0.3"
