[package]
name = "r2c"
version = "0.2.0"
authors = ["chirsz <chirsz@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest             = "2.1"
pest_derive      = "2.1"
rustyline        = "6.3"
rustyline-derive = "0.3.1"
anyhow           = "1.0"
clap             = "2.33"
num-bigint       = "0.3"
num-traits       = "0.2"
